<resources>
    <string name="app_name">Bluetooth Sensor App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="StartScanButton">Scan</string>
    <string name="StopScanButton">Stop scanning</string>
    <string name="gps_not_enabled">GPS is disabled, please activate location services to detect new BLE devices</string>
    <string name="open_location_settings">Open settings </string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="access_granted">Access was granted</string>
    <string name="attention">Attention</string>
    <string name="location_request_denied">Location information request denied. The application is not able to find new BLE devices.</string>
    <string name="request_gps_title">Please enable location information services</string>
    <string name="request_gps_message">The application needs location information to be able to find new BLE devices.</string>

    <string name="button_export">Export</string>
    <string name="button_restore">Restore</string>
    <string name="button_import">Import</string>
    <string name="desc_export">Export the data gathered by the application to the external storage of the device.</string>
    <string name="desc_restore">Replace the internal database with data from the external storage.\nThis will delete all data that has been saved by the application.</string>
    <string name="desc_import">Import the data of another database into the application while keeping the gathered data.</string>
    <string name="request_storage_title">Please enable storage writing permissions and try again.</string>
    <string name="request_storage_message">To export and import data the application needs to have the right to access the external storage.</string>
    <string name="storage_request_granted">Reading and writing to the external storage is now possible.\nPlease try again.</string>
    <string name="storage_request_denied">Sharing data with the external storage is not possible without system permission.</string>
    <string name="error_export_title">Could not export database</string>
    <string name="error_export_desc">Please make sure that the external storage is mounted and accessible.</string>
    <string name="error_import_title">Could not restore or import database</string>
    <string name="error_import_desc">Please make sure that the external storage is accessible, the import file is saved under the correct path and the database is of a valid format.</string>

    <string name="menu_manage_sensors">Manage Sensors</string>
    <string name="menu_clear_data">Clear Data</string>
    <string name="menu_manage_connection">Manage Connection</string>
    <string name="menu_export_import">Export / Import</string>
    <string name="menu_other">Other</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="button_desc_temperature">display temperature chart</string>
    <string name="button_desc_brightness">display brightness chart</string>
    <string name="button_desc_pressure">display pressure charts</string>
    <string name="button_desc_humidity">display humidity charts</string>
    <string name="button_start_record">start record</string>
    <string name="button_stop_record">stop record</string>

    <string name="statistics_header"><u>Statistics</u></string>
    <string name="no_of_sensors">No of sensors:  %d</string>
    <string name="no_of_records">No of records:  %d</string>
    <string name="recording_time">total recording time:  %s</string>
    <string name="no_of_measurements">No of data points:  %d</string>
    <string name="loading">loading…</string>
    <string name="error_while_loading">inaccessible</string>
    <string name="desc_team"><b>Bluetooth Sensor App</b>\n\nStefan Erk\nIan Mackerracher\nTobias Nusser\nKim Rehberg\nPatrick Reichle</string>
    <string name="library">Thanks to the MPAndroidChart library by PhilJay.</string>
    <string name="licence">Usable under the terms of Apache License 2.0\nhttp://www.apache.org/licenses/</string>

    <string name="not_available">Not available</string>
    <string name="records">Recordings</string>
    <string name="records_settings">Select recording</string>
    <string name="select_time_span_settings">Select time span</string>
    <string name="select_sensors_settings">Select sensor</string>
    <string name="refresh">Refresh graph</string>
    <string name="info">Show details</string>
    <string name="zoom_out">Reset zoom</string>
    <string name="screen_on">Display always on</string>
    <string name="screen_off">Display timeout</string>
    <string name="stored_records_text">Stored recordings</string>
    <string name="stored_sensors_text">Stored sensors</string>
    <string name="activated_sensors_text">Activated sensors</string>
    <string name="humidity_sensor">Humidity sensor</string>
    <string name="brightness_sensor">Brightness sensor</string>
    <string name="temperature_sensor">Temperature sensor</string>
    <string name="pressure_sensor">Pressure sensor</string>
    <string name="save_and_display_sensors">Save and display sensors</string>
    <string name="button">Delete all</string>

    <string name="edit_dialog_name">Name:</string>

    <string name="invalid_time_span">Invalid time span, please select again.</string>
    <string name="time_span_too_long">Selected time span is longer than one month. Please select again.</string>

</resources>
