<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.groupfourtwo.bluetoothsensorapp.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ImageView
        android:id="@+id/imageButtonTemperature"
        android:contentDescription="@string/button_desc_temperature"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:onClick="changeToTemperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thermometer"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp" />

    <ImageView
        android:id="@+id/imageButtonBrightness"
        android:contentDescription="@string/button_desc_brightness"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:onClick="changeToBrightness"
        app:srcCompat="@drawable/brightness"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonTemperature" />

    <ImageView
        android:id="@+id/imageButtonPressure"
        android:contentDescription="@string/button_desc_pressure"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:onClick="changeToPressure"
        app:srcCompat="@drawable/pressure"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBrightness" />

    <ImageView
        android:id="@+id/imageButtonHumidity"
        android:contentDescription="@string/button_desc_humidity"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:onClick="changeToHumidity"
        app:srcCompat="@drawable/humidtiy"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonPressure" />


    <TextView
        android:id="@+id/textViewCurrentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/not_available"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonTemperature"
        app:layout_constraintTop_toTopOf="@+id/imageButtonTemperature"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonTemperature"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.535" />


    <TextView
        android:id="@+id/textViewCurrentPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/not_available"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPressure"
        app:layout_constraintTop_toTopOf="@+id/imageButtonPressure"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonPressure"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textViewCurrentBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/not_available"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonBrightness"
        app:layout_constraintTop_toTopOf="@+id/imageButtonBrightness"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonBrightness"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textViewCurrentHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/not_available"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonHumidity"
        app:layout_constraintTop_toTopOf="@+id/imageButtonHumidity"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonHumidity"
        android:layout_marginBottom="0dp" />

    <ToggleButton
        android:id="@+id/toggleStartStopRecord"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:checked="false"
        android:textOff="@string/button_start_record"
        android:textOn="@string/button_stop_record"
        android:textSize="16sp"
        android:onClick="startStopRecord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonHumidity"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />


</android.support.constraint.ConstraintLayout>
